--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form</title>
+    <title>Contact Form edited</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,9 +24,6 @@
 <img src="Assets/chhanel pic.png" alt="">
     </div>
 
-    </div>
-<script>
-    kdjfkajldf kdjfkaldjf
-</script>    
+    </div>  
 </body>
 </html>
