--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form edited</title>
+    <title>Contact Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="cotact-contaier">
     <form action="https://api.web3forms.com/submit" method="POST" class="cotact-left">
 <div class="contact-left-title">
-    <h2>Contact Us here,</h2>
+    <h2>Contact Us,</h2>
     <hr>
 </div>
 <input type="hidden" name="access_key" value="3556201c-3de4-40c7-9db5-379070607dc4">
